# quagga

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
data/: template.txt
docs/: TODO.md  development.md  release.md
src/: binary_detector.rs  cli.rs  contain.rs  dry_run.rs  file_reader.rs  file_walker.rs  lib.rs  main.rs  non_template.rs  processor.rs  quagga_ignore.rs  show_paths.rs  template.rs  test_utils.rs  tree.rs  walk_overrides.rs
src/file/: comment_remover.rs  file_content.rs  file_reader.rs  mod.rs  size.rs
src/filter/: filter.rs  mod.rs  remove_comments.rs
src/info/: README.md  file_sizes.rs  info.rs  mod.rs  size.rs  tree.rs
src/output/: clipboard.rs  file.rs  mod.rs  output.rs  stdout.rs
src/template/: README.md  concatenate.rs  copy.rs  mod.rs  parse.rs  quagga_template.rs  read.rs  split.rs  template.rs  validator.rs
src/template/parser/: mod.rs  parse.rs  template.rs
src/template/tags/: all_file_paths.rs  header_footer.rs  mod.rs  total_file_size.rs  tree.rs
src/test_utils/: README.md  mod.rs  temp_dir.rs
src/tree/: concatenate.rs  mod.rs
src/walk/: README.md  binary_detector.rs  contain.rs  file_walker.rs  mod.rs
templates/: default.md  default.txt
tests/: integration_test.rs
tests/common/: mod.rs
