[package]
name = "quagga"
version = "0.1.1"
edition = "2021"
description = "Quagga: A CLI tool that combines multiple text files into a single prompt suitable for Large Language Models."
license = "Unlicense"
repository = "https://github.com/evgenyneu/quagga"
readme = "README.md"
homepage = "https://github.com/evgenyneu/quagga"
documentation = "https://docs.rs/quagga"
keywords = ["text", "CLI", "LLM"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
expectrl = "0.7"
predicates = "3.1"

[lib]
name = "quagga"
path = "src/lib.rs"
[[bin]]
name = "quagga"
path = "src/main.rs"

