[package]
name = "quagga"
version = "0.1.3"
edition = "2021"
description = "Quagga: A CLI tool that combines multiple text files into a single prompt suitable for Large Language Models."
license = "Unlicense"
repository = "https://github.com/evgenyneu/quagga"
readme = "README.md"
homepage = "https://github.com/evgenyneu/quagga"
documentation = "https://docs.rs/quagga"
keywords = ["text", "CLI", "LLM"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
home = "0.5"
arboard = "3.4.1"

[dev-dependencies]
assert_cmd = "2.0"
expectrl = "0.7"
predicates = "3.1"
regex = "1"
serial_test = "3.1"

[lib]
name = "quagga"
path = "src/lib.rs"

[[bin]]
name = "quagga"
path = "src/main.rs"

[profile.release]
# Settings to make release binary smaller: https://github.com/johnthagen/min-sized-rust
strip = true # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce Parallel Code Generation
